fix homepage CTA alignment

--- a/_sass/includes/homepage-benefactors-band.scss
+++ b/_sass/includes/homepage-benefactors-band.scss
@@ -28,3 +28,11 @@
     }
   }
 }
+
+.homebandCTAalign {
+  text-align: right;
+
+    @media screen and (max-width: 768px) {
+    text-align: left;
+  }
+}
